# slacker

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  slacker.cabal
example/: Main.hs
example-app/: cabal.project  example-app.cabal
example-app/app/: Main.hs
src/: Slacker.hs
src/Slacker/: Blocks.hs  Config.hs  Events.hs  SocketMode.hs  Util.hs  Web.hs
src/Slacker/Blocks/: Actions.hs  Append.hs  Builder.hs  Context.hs  Core.hs  Divider.hs  Elements.hs  Fields.hs  Header.hs  Image.hs  Section.hs
src/Slacker/Blocks/Elements/: Builder.hs  Button.hs  Core.hs  Image.hs  TextObject.hs
src/Slacker/Events/: AppMention.hs
src/Slacker/SocketMode/: Types.hs
src/Slacker/Web/: Files.hs
