cabal-version:      3.0
name:               slacker
version:            0.1.0.0
category:           Web, Slack, SDK
synopsis:           Haskell library for the Slack Socket Mode API
license:            MIT
license-file:       LICENSE
author:             Josh Miller <notjoshmiller@gmail.com>
maintainer:         Josh Miller <notjoshmiller@gmail.com>
extra-source-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: git@github.com:velveteer/slacker.git

flag strict
  description: Enable more GHC warnings plus @-Werror@, which turns warnings into errors.
  default: False
  manual: True

library 
  default-extensions: 
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    DataKinds,
    DeriveGeneric,
    DerivingStrategies,
    DuplicateRecordFields,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    TypeApplications,
    TypeOperators,
    ViewPatterns
  exposed-modules:
    Slacker,
    Slacker.Blocks,
    Slacker.Blocks.Append,
    Slacker.Blocks.Builder,
    Slacker.Blocks.Actions,
    Slacker.Blocks.Context,
    Slacker.Blocks.Divider,
    Slacker.Blocks.Fields,
    Slacker.Blocks.Header,
    Slacker.Blocks.Image,
    Slacker.Blocks.Section,
    Slacker.Blocks.Elements,
    Slacker.Blocks.Elements.Builder,
    Slacker.Blocks.Elements.Button,
    Slacker.Blocks.Elements.Image,
    Slacker.Blocks.Elements.TextObject,
    Slacker.Config,
    Slacker.SocketMode,
    Slacker.SocketMode.Types,
    Slacker.Web,
    Slacker.Util
  build-depends:
    aeson                         >= 2.0.3 && < 2.1,
    base                          >= 4.14.3 && < 4.17,
    dlist                         >= 1.0 && < 1.1,
    exceptions                    >= 0.10.4 && < 0.11,
    http-client                   >= 0.7.11 && < 0.8,
    http-conduit                  >= 2.3.8 && < 2.4,
    microlens                     >= 0.4.12 && < 0.5,
    microlens-aeson               >= 2.4 && < 2.6,
    monad-logger-aeson            >= 0.2.0 && < 0.3,
    network-uri                   >= 2.6.4 && < 2.7,
    stm-chans                     >= 3.0.0 && < 3.1,
    text                          >= 1.2.4 && < 3.0,
    unliftio                      >= 0.2.22 && < 0.3,
    unliftio-core                 >= 0.2.0 && < 0.3,
    websockets                    >= 0.12.7 && < 0.13,
    world-peace                   >= 1.0.2 && < 1.1,
    wuss                          >= 1.1.19 && < 2.1,

  hs-source-dirs:   src
  default-language: Haskell2010
  if flag(strict)
    ghc-options: 
      -Wall 
      -Werror 
      -Wcompat 
      -Widentities 
      -Wincomplete-uni-patterns 
      -Wincomplete-record-updates 
      -Wmissing-export-lists 
      -Wno-implicit-prelude 
      -Wno-safe 
      -Wno-unsafe 
      -Wnoncanonical-monad-instances 
      -Wredundant-constraints 
      -Wpartial-fields 
      -Wmissed-specialisations 
      -Wunused-packages 
  else
    ghc-options: -Wall

executable example-bot
  hs-source-dirs:      example
  main-is:             Main.hs
  default-extensions: 
    LambdaCase,
    OverloadedLabels,
    OverloadedStrings
  default-language:    Haskell2010
  build-depends:
    aeson,
    aeson-pretty,
    base,
    generic-lens,
    microlens,
    microlens-aeson,
    slacker,
    text,
    transformers,
    unix
